envoy/httpmanager/healthcheck/healthcheck.yaml
# 更改头部信息 对头部 进行更改

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      name: listener_http
      filter_chains:
        - filters:
#            - name: envoy.filters.http.health_check
#              typed_config:
#                "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
#                pass_through_mode: true
#                cache_time:
#                  seconds: 100
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: www2
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: helloworld_v1

  clusters:
    - name: helloworld_v1
      connect_timeout: 15s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      #http2_protocol_options: {}
      load_assignment:
        cluster_name: helloworld_v1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
      health_checks:
        timeout: 2s
        interval: 5s
        interval_jitter: 1s
        unhealthy_threshold: 1
        healthy_threshold: 3
        no_traffic_interval: 60s
        event_log_path: /dev/stdout
        http_health_check:
          path: /healthz
